// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component injection renders class components 1`] = `
<MyRenderClassComponent
  error=""
  getImageProps={[Function]}
  getViewProps={[Function]}
  loading={false}
/>
`;

exports[`component injection renders the component with expected parameters on failure 1`] = `
<View
  error="mockUriBad"
  getImageProps={[Function]}
  getViewProps={[Function]}
  loading={false}
/>
`;

exports[`component injection renders the component with expected parameters on success 1`] = `
<View
  error=""
  getImageProps={[Function]}
  getViewProps={[Function]}
  loading={false}
/>
`;

exports[`function-as-children calls children with expected parameters on failure 1`] = `
Array [
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": true,
    },
  ],
  Array [
    Object {
      "error": "mockUriBad",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": false,
    },
  ],
]
`;

exports[`function-as-children calls children with expected parameters on success 1`] = `
Array [
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": true,
    },
  ],
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": false,
    },
  ],
]
`;

exports[`getImageProps composes consumer props with own props 1`] = `
Object {
  "onLayout": [MockFunction Image#onLayout],
  "source": Object {
    "uri": "mockUriGood",
  },
  "style": Array [
    Object {
      "height": "50%",
      "width": "50%",
    },
    Object {
      "height": "100%",
      "width": "100%",
    },
  ],
}
`;

exports[`getImageProps sets height and width to 100% 1`] = `
Object {
  "source": Object {
    "uri": "mockUriGood",
  },
  "style": Array [
    Object {},
    Object {
      "height": "100%",
      "width": "100%",
    },
  ],
}
`;

exports[`getViewProps composes consumer props with own props 1`] = `
Object {
  "hitSlop": Object {
    "bottom": 10,
    "left": 0,
    "right": 0,
    "top": 10,
  },
  "style": Array [
    Object {
      "padding": 20,
    },
    Object {
      "aspectRatio": 1.3333333333333333,
    },
  ],
}
`;

exports[`getViewProps includes calculated aspectRatio if not provided 1`] = `
Object {
  "style": Array [
    Object {},
    Object {
      "aspectRatio": 1.3333333333333333,
    },
  ],
}
`;

exports[`getViewProps includes controlled aspectRatio 1`] = `
Object {
  "style": Array [
    Object {},
    Object {
      "aspectRatio": 1.7777777777777777,
    },
  ],
}
`;

exports[`render prop calls render with expected parameters on failure 1`] = `
Array [
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": true,
    },
  ],
  Array [
    Object {
      "error": "mockUriBad",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": false,
    },
  ],
]
`;

exports[`render prop calls render with expected parameters on success 1`] = `
Array [
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": true,
    },
  ],
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": false,
    },
  ],
]
`;

exports[`rendering order (component > render > FAC > children > null) calls children function if no component or render prop was provided: children 1`] = `
Array [
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": true,
    },
  ],
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": false,
    },
  ],
]
`;

exports[`rendering order (component > render > FAC > children > null) calls render if no component was provided: children 1`] = `Array []`;

exports[`rendering order (component > render > FAC > children > null) calls render if no component was provided: render 1`] = `
Array [
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": true,
    },
  ],
  Array [
    Object {
      "error": "",
      "getImageProps": [Function],
      "getViewProps": [Function],
      "loading": false,
    },
  ],
]
`;

exports[`rendering order (component > render > FAC > children > null) renders children if no component, render prop, or FAC was provided 1`] = `
<View>
  <Text>
    Hello from non-functional children!
  </Text>
</View>
`;

exports[`rendering order (component > render > FAC > children > null) renders component if provided 1`] = `
<View
  error=""
  getImageProps={[Function]}
  getViewProps={[Function]}
  loading={false}
/>
`;

exports[`rendering order (component > render > FAC > children > null) renders component if provided: children 1`] = `Array []`;

exports[`rendering order (component > render > FAC > children > null) renders component if provided: render 1`] = `Array []`;
